Added cards with placeholder images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,44 @@
     <img class="avatar" src="images/Avatar.jpg" alt="..." width="fully" height="200"/>
   </div>
 
-  <!---->
+  <!--Work section-->
+  <div class="card-deck">
+    <div class="card">
+      <img class="card-img-top" src="images/placeholder-images-318076618" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Project 1</h5>
+        <p class="card-text">amet consectetur adipiscing elit ut</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="images/placeholder-images-318076618" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Project 2</h5>
+        <p class="card-text">amet consectetur adipiscing elit ut</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="images/placeholder-images-318076618" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Project 3</h5>
+        <p class="card-text">amet consectetur adipiscing elit ut</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+  </div>
+
+  
+
+  <!--Skills section-->
+
 
 
 </body>
