Skills section added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <!--Work section-->
-  <div class="card-deck">
+  <div class="card-deck" id="portfolio">
     <div class="card">
       <img class="card-img-top" src="images/placeholder-images-318076618" alt="Card image cap">
       <div class="card-body">
@@ -67,11 +67,15 @@
     </div>
   </div>
 
-  
-
   <!--Skills section-->
+ <section>
+  <h6>Skills learnt</h6>
+  <p>I will be learning HTML, CSS and Javascript during this bootcamp.
+  </p>
+ </section>
 
-
+ <!--About section-->
+ 
 
 </body>
 </html>
