Removed Icon divider from template

--- a/index.html
+++ b/index.html
@@ -69,13 +69,35 @@
 
   <!--Skills section-->
  <section>
-  <h6>Skills learnt</h6>
+  <h1 class="display 5">Skills learnt</h1>
   <p>I will be learning HTML, CSS and Javascript during this bootcamp.
   </p>
  </section>
 
- <!--About section-->
- 
+ <!--About/Contact section-->
+ <section class="page-section bg-primary text-white mb-0" id="about">
+  <div class="container">
+      <!-- About Section Heading-->
+      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+    <!-- About Section Content-->
+      <div class="row">
+          <div class="col-lg-4 ms-auto"><p class="lead">amet consectetur adipiscing elit ut</p></div>
+          <div class="col-lg-4 me-auto"><p class="lead">amet consectetur adipiscing elit ut</p></div>
+      </div>
+  </div>
+</section>
 
+
+<!--Footer section-->
+<footer  class="footer text-center">
+  <div class="container">
+      <div class="row">
+        amet consectetur adipiscing elit ut
+  </div>
+</footer>
+<!-- Copyright Section-->
+<div class="copyright py-4 text-center text-green">
+  <div class="container"><small>Copyright &copy; Nishit Joshi 2023</small></div>
+</div>
 </body>
 </html>
