--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Portfolio</title>
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -28,9 +29,9 @@
   <div class="jumbotron">
     <h1 class="display-4">Front-End Web Developer</h1>
     <p>Nishit Joshi</p>
-
-    <!--Avatar Image-->
-    <img class="avatar" src="images/Avatar.jpg" alt="..." width="fully" height="200"/>
+6
+    <!--Avatar Image-->`` 
+    <img class="avatar" src="images/Avatar.jpg" alt="NJ's image" height="200"/>
   </div>
 
   <!--Work section-->
@@ -71,33 +72,27 @@
  <section>
   <h1 class="display 5">Skills learnt</h1>
   <p>I will be learning HTML, CSS and Javascript during this bootcamp.
-  </p>
+</p>
  </section>
 
  <!--About/Contact section-->
- <section class="page-section bg-primary text-white mb-0" id="about">
-  <div class="container">
-      <!-- About Section Heading-->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
-    <!-- About Section Content-->
-      <div class="row">
-          <div class="col-lg-4 ms-auto"><p class="lead">amet consectetur adipiscing elit ut</p></div>
-          <div class="col-lg-4 me-auto"><p class="lead">amet consectetur adipiscing elit ut</p></div>
-      </div>
-  </div>
+<div class="container" id="about">
+  <div class="row">
+    <div class="col-sm">
+      About Me
+    </div>
+     <div class="col-sm" id="contact">
+      Contact
+    </div>
 </section>
 
 
 <!--Footer section-->
 <footer  class="footer text-center">
   <div class="container">
-      <div class="row">
         amet consectetur adipiscing elit ut
   </div>
 </footer>
-<!-- Copyright Section-->
-<div class="copyright py-5 text-center text-green">
-  <div class="container"><small>Copyright &copy; Nishit Joshi 2023</small></div>
-</div>
+
 </body>
 </html>
