Footer section, inspired from an existing template

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <div class="jumbotron">
     <h1 class="display-4">Front-End Web Developer</h1>
     <p>Nishit Joshi</p>
-6
-    <!--Avatar Image-->`` 
+    <!--Avatar Image-->
     <img class="avatar" src="images/Avatar.jpg" alt="NJ's image" height="200"/>
   </div>
 
@@ -73,26 +72,50 @@
   <h1 class="display 5">Skills learnt</h1>
   <p>I will be learning HTML, CSS and Javascript during this bootcamp.
 </p>
- </section>
+</section>
 
- <!--About/Contact section-->
+<!--About/Contact section-->
 <div class="container" id="about">
   <div class="row">
     <div class="col-sm">
-      About Me
+      <b>About Me</b>
+      <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
     </div>
-     <div class="col-sm" id="contact">
-      Contact
+    <div class="col-sm" id="contact">
+      <b>Contact</b>
+      <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
     </div>
 </section>
 
 
-<!--Footer section-->
-<footer  class="footer text-center">
-  <div class="container">
-        amet consectetur adipiscing elit ut
-  </div>
-</footer>
-
+<!--Footer section - inspired from https://startbootstrap.com/theme/freelancer-->
+        <!-- Footer-->
+        <footer class="footer text-center">
+          <div class="container">
+              <div class="row">
+                  <!-- Footer Location-->
+                  <div class="col-lg-4 mb-5 mb-lg-0">
+                      <h4 class="text-uppercase mb-4">Location</h4>
+                      <p class="lead mb-0">
+                        lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
+                          <br />
+                          
+                      </p>
+                  </div>
+                  <!-- Footer Social Icons-->
+                  <div class="col-lg-4 mb-5 mb-lg-0">
+                      <h4 class="text-uppercase mb-4">lorem ipsum lorem ipsum lorem ipsum lorem ipsum</h4>
+                  </div>
+                  <!-- Footer Github link-->
+                  <div class="col-lg-4">
+                      <h4 class="text-uppercase mb-4">Lorem Ipsum</h4>
+                      <p class="lead mb-0">
+                          Check out my 
+                          <a href="https://github.com/nj-09">Github page.</a>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </footer>
 </body>
 </html>
